# ddd-litestar

./: .env.template  .gitignore  .pre-commit-config.yaml  .pylint_default  .pylintrc  .pylintrc copy  .pylintrc2  .ruff.toml  Dockerfile  alembic.ini  asdfasdfas  docker-compose.yaml  justfile  kafka.sh  mypy.ini  pyproject.toml
config/: config.template.toml  prod_config.template.toml
src/: __main__.py  kafka_test_consumer.py  kafka_test_producer.py  postgres_test_connection.py
src/application/common/: command.py  dto.py  event.py  exceptions.py  query.py
src/application/common/interfaces/: outbox.py  uow.py
src/application/common/mediator/: __init__.py  base.py  command.py  event.py  query.py
src/application/common/pagination/: dto.py
src/application/messages/: exceptions.py
src/application/messages/commands/: create_chat.py  create_message.py
src/application/messages/dto/: __init__.py  message.py  messages.py
src/application/messages/events/: message_received.py
src/application/messages/queries/: get_messages_by_chat.py
src/application/messages/websockets/: managers.py
src/application/user/commands/: __init__.py  create_user.py
src/application/user/dto/: __init__.py  users.py
src/application/user/intefraces/: __init__.py
src/application/user/interfaces/: __init__.py
src/application/user/queries/: get_user_by_id.py
src/domain/common/entities/: __init__.py  aggregate_root.py
src/domain/common/events/: __init__.py  event.py
src/domain/common/exceptions/: __init__.py  base.py
src/domain/common/value_objects/: __init__.py  base.py  id.py
src/domain/messages/: exceptions.py
src/domain/messages/entities/: __init__.py  messages.py
src/domain/messages/events/: __init__.py  chat_created.py  chat_deleted.py  listener_added.py  message_created.py  messages.py
src/domain/messages/value_objects/: __init__.py  base.py  id.py  text.py  title.py
src/domain/user/: __init__.py
src/domain/user/entities/: user.py
src/domain/user/events/: __init__.py  full_name_updated.py  user_created.py  user_deleted.py  username_updated.py
src/domain/user/value_objects/: __init__.py  deleted_status.py  full_name.py  user_id.py  username.py
src/infrastructure/: config.py  config_loader.py  containers.py  ioc.py  uow.py
src/infrastructure/event_bus/: __init__.py  converters.py  event_bus.py  event_handler.py
src/infrastructure/event_bus/events/: __init__.py  base.py  chat_created.py  message_created.py  user_created.py
src/infrastructure/log/: __init__.py  event_handler.py  main.py  processors.py
src/infrastructure/mediator/: __init__.py  exceptions.py  mediator.py
src/infrastructure/mediator/dispatchers/: __init__.py  command.py  query.py  request.py
src/infrastructure/mediator/interface/: __init__.py  exceptions.py  mediator.py
src/infrastructure/mediator/middlewares/: __init__.py  base.py  logging.py
src/infrastructure/mediator/observers/: __init__.py  event.py
src/infrastructure/message_broker/: config.py  converters.py  factories.py  interface.py  kafka.py  message.py
src/infrastructure/mongo/: config.py  converters.py
src/infrastructure/mongo/repositories/: base.py  chat.py  memory.py  message.py
src/infrastructure/postgres/: __init__.py  config.py  converters.py  exception_mapper.py  main.py  uow.py  utility_wrappers.py
src/infrastructure/postgres/migrations/: env.py
src/infrastructure/postgres/models/: __init__.py  base.py  outbox.py  user.py
src/infrastructure/postgres/repositories/: base.py  outbox.py  user.py
src/infrastructure/postgres/services/: healthcheck.py
src/infrastructure/repositories/messages/: base.py  memory.py
src/presentation/api/: __main__.py  config.py  lifespan.py  main.py  uvicorn_runner.py
src/presentation/api/controllers/: __init__.py  chat.py  controllers.py  exceptions.py  general.py  (+2 more)
tests/: conftest copy.py  conftest.py  fixtures.py  test_app.py  test_health_check.py
tests/api/: conftest.py  test_app.py
tests/integration/: conftest.py
tests/mocks/: event_mediator.py  uow.py  user_repo.py
tests/presentation/api/: conftest.py  test_app.py  test_mes.py  test_messages.py
tests/unit/application/: conftest.py
(+38 files in other folders)
