[tool.poetry]
name = "ddd-litestar"
version = "0.1.0"
description = ""
authors = ["daron035 <kamil249@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
litestar = "^2.9.1"
uvicorn = "^0.30.1"
uuid6 = "^2024.1.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pylint = "^3.2.5"
mypy = "^1.10.1"
ruff = "^0.5.0"

[tool.black]
line-length = 120
target-version = ["py311"]
include_trailing_comma = true
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
combine_as_imports = true
remove_redundant_aliases = true
known_first_party = ["domain", "config", "logic", "infrastructure", "tests", "presentation"]
sections = [
    "FUTURE",
    "THIRDPARTY",
    "STDLIB",
    "LITESTAR",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
